force-app/main/default/objects/Lead/fields/Agreed_to_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field reagarding terms and condition.</description>
    <label>Agreed to Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>