force-app/main/default/objects/Lead/fields/Entered_past_investment_page__c.field-meta.xml
<CustomField>
    <fullName>Entered_past_investment_page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>limited partner leads will check this field if they want  to see past investment.</description>
    <label>Entered past investment page</label>
    <type>Checkbox</type>
</CustomField>