force-app/main/default/objects/Lead/fields/Linked_in__c.field-meta.xml
<CustomField>
    <fullName>Linked_in__c</fullName>
    <description>It capture linkedin profile for limited partner lead.</description>
    <label>Linked in</label>
    <type>Url</type>
</CustomField>