force-app/main/default/objects/Lead/fields/Subcribed__c.field-meta.xml
<CustomField>
    <fullName>Subcribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox field for signing up to receive offers, promotions and other commercial messages.</description>
    <label>Subcribed</label>
    <type>Checkbox</type>
</CustomField>